syntax = "proto3";

package strings;

service StringsExtractor {
   rpc ExtractStrings (StringsRequest) returns (StringsReply) {}
}

message StringsRequest {
   // ID of file.
   string id = 1;
}

message StringInfo {
	uint64 location = 1;
	string raw_string = 2;
}

message StringsReply {
   repeated StringInfo strings = 1;
}
